# Web_HW_11

./: .coverage  docker-compose.yml  main.py  models.py  pyproject.toml  readme.md  schemas.py  sql_app.db  test.py
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migrations/versions/: 8d61454e08e0_init.py  924fee2d4254_add_email_verification.py  d227ee9b9242_hw12.py  ec2b1f8beb8e_hw12.py
src/: schemas.py
src/conf/: config.ini  config.py
src/database/: db.py  models.py
src/repository/: contacts.py  persons.py  test_unit_contacts.py  test_unit_persons.py  test_unit_users.py  users.py
src/routes/: auth.py  contacts.py  persons.py  users.py
src/services/: auth.py  email.py  upload_avatar.py
src/services/templates/: email_template.html
tests/: test.db  test_unit_contacts.py  test_unit_persons.py  test_unit_users.py  tests_main.py  tests_route_auth.py
